Refactoring game instance into separate instances for better view
This means that if there is a new game type that can be added to ragemode, now it requires to extend to BaseGame abstract class. Objects can convert an existing game to a new one with #setGameType method

- Misc optimizations, especially for iteration, we'll trying to get rid of streams where possible.
- Game items with amount 0 or less will not be given to players. So server owners can disable specific items if they want.
- Extended in-game allowed commands, so now it is accepts command aliases
- Simplified and server owners can change any time the database connection command through config.
- Holograms will be removed entirely if armor stand entities is dead and their positions are the same.
- In zombie apocalypse mode, instead of setting the world time, player time will now be set, so only players in the game will have an evening.
- Now all inventory type interaction/click will be cancelled, except for items.
- Moved zombie spawning mechanic
- Support for 1.17+ versions
- From now player's nametag visiblity will be cached upon join to restore old one
- Added more placeholders